@@ -20,13 +20,28 @@ JAVA_OPTS="${JAVA_OPTS} -DNodeTier=${NODE_TIER}"
 #
 JAVA_OPTS="${JAVA_OPTS} -XX:HeapDumpPath=${HEAP_DUMP_PATH}"
 
-# Pega log directory
-JAVA_OPTS="${JAVA_OPTS} -Dpega.logdir=${CATALINA_HOME}/logs/${HOSTNAME}"
+# Pega log directory (set before existing JAVA_OPTS so that duplicate settings in JAVA_OPTS will win)
+JAVA_OPTS="-Dpega.logdir=${CATALINA_HOME}/logs/${HOSTNAME} ${JAVA_OPTS}"
 
 # Heap size settings (set before existing JAVA_OPTS so that duplicate settings in JAVA_OPTS will win)
 JAVA_OPTS="-Xms${INITIAL_HEAP} -Xmx${MAX_HEAP} ${JAVA_OPTS}"
 
-echo JAVA_OPTS: \"${JAVA_OPTS}\"
+# Settings to run hazelcast in modular java (i.e. java 9 and newer)
+JAVA_OPTS="${JAVA_OPTS} --add-modules java.se --add-exports java.base/jdk.internal.ref=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.ibm.lang.management.internal=ALL-UNNAMED \
+--add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED"
+
+krb5_conf="/opt/pega/kerberos/krb5.conf"
+#
+# Adding krb5.conf location to JAVA_OPTS
+#
+if [ -e "$krb5_conf" ]; then
+  echo "Adding ${krb5_conf} to JAVA_OPTS";
+  JAVA_OPTS="${JAVA_OPTS} -Djava.security.krb5.conf=${krb5_conf}"
+else
+  echo "No krb5.conf was specified in ${krb5_conf}."
+fi
+
+echo "JAVA_OPTS: \"${JAVA_OPTS}\""
 export  JAVA_OPTS
 
 # Node settings
@@ -37,6 +52,12 @@ CATALINA_OPTS="${CATALINA_OPTS} -DNodeSettings=\"Pega-IntegrationEngine/EnableRe
 # Index settings
 #  When left blank, disable indexing.
 CATALINA_OPTS="${CATALINA_OPTS} -Dindex.directory=${INDEX_DIRECTORY}"
+
+if [ -n "${MAX_RETRIES}" ] && [ -n "${RETRY_TIMEOUT}" ]; then
+  # Classloader Timeout settings
+  CATALINA_OPTS="${CATALINA_OPTS} -Dcom.pega.pegarules.bootstrap.maxretries=${MAX_RETRIES}"
+  CATALINA_OPTS="${CATALINA_OPTS} -Dcom.pega.classloader.retrytimeout=${RETRY_TIMEOUT}"
+fi
 
 # If not setting USE_CUSTOM_JMX_CONNECTION to "true", specify default JVM arguments for JMX
 if [ "${USE_CUSTOM_JMX_CONNECTION}" != "true" ]; then
@@ -51,7 +72,7 @@ fi
 # Provide setting required for stream node 
 if [ "${IS_STREAM_NODE}" = "true" ]; then
   CATALINA_OPTS="${CATALINA_OPTS} -Dprconfig/dsm/services=StreamServer "
-  CATALINA_OPTS="${CATALINA_OPTS} -Dprconfig/dsm/services/stream/pyUnpackBasePath/tmp/kafka "
+  CATALINA_OPTS="${CATALINA_OPTS} -Dprconfig/dsm/services/stream/pyUnpackBasePath=/tmp/kafka "
   CATALINA_OPTS="${CATALINA_OPTS} -Dprconfig/dsm/services/stream/server_properties/unclean.leader.election.enable=false "
 fi
 
@@ -63,5 +84,5 @@ CATALINA_OPTS="${CATALINA_OPTS} -XX:+ExitOnOutOfMemoryError"
 CATALINA_OPTS="-XX:+UseStringDeduplication ${CATALINA_OPTS}"
 CATALINA_OPTS="-Xlog:gc*,gc+heap=debug,gc+humongous=debug:file=/usr/local/tomcat/logs/gc.log:uptime,pid,level,time,tags:filecount=3,filesize=2M ${CATALINA_OPTS}"
 
-echo CATALINA_OPTS: \"${CATALINA_OPTS}\"
+echo "CATALINA_OPTS: \"${CATALINA_OPTS}\""
 
